--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,20 +5,20 @@ homepage: https://github.com/AurityLab/mapkit_snapshotter_flutter
 issue_tracker: https://github.com/AurityLab/mapkit_snapshotter_flutter/issues
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.1.3 <4.0.0'
   flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  json_annotation: ^4.0.0
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.11.0
-  build_runner: ^1.11.5
-  json_serializable: ^4.0.2
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
+  flutter_lints: ^3.0.1
 
 flutter:
   plugin:
